Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,8 @@
     }
    ],
    "source": [
-    "total_reviews = list(map(lambda total: sum(review_counts), restaurants))\n",
+    "total_reviews = list(map(lambda total: \n",
+    "                         \n",
     "total_reviews # 3420"
    ]
   },
