--- a/index.ipynb
+++ b/index.ipynb
@@ -193,25 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[3420, 3420, 3420, 3420, 3420, 3420, 3420, 3420]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-171673a8d9e7>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-171673a8d9e7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for review_count in review_counts:\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "total_reviews = list(map(lambda total: \n",
     "    total_reviews = 0\n",
-    "for review_count in review_counts:\n",
-    "    total_reviews += review_count\n",
+    "    for review_count in review_counts:\n",
+    "        total_reviews += review_count\n",
     "total_reviews # 3420"
    ]
   },
