--- a/index.ipynb
+++ b/index.ipynb
@@ -193,23 +193,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-171673a8d9e7>, line 3)",
+     "ename": "NameError",
+     "evalue": "name 'review_counts' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-171673a8d9e7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for review_count in review_counts:\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-a7815cc63e94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtotal_reviews\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mreview_count\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreview_counts\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mtotal_reviews\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mreview_count\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtotal_reviews\u001b[0m \u001b[0;31m# 3420\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'review_counts' is not defined"
      ]
     }
    ],
    "source": [
-    "total_reviews = list(map(lambda total: \n",
-    "    total_reviews = 0\n",
-    "    for review_count in review_counts:\n",
-    "        total_reviews += review_count\n",
+    "total_reviews = 0\n",
+    "for review_count in review_counts:\n",
+    "    total_reviews += review_count\n",
     "total_reviews # 3420"
    ]
   },
