--- a/index.ipynb
+++ b/index.ipynb
@@ -326,12 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(filter(lambda x: x['is_closed'] == 'False', restaurants))\n"
+    "    return list(filter(lambda x: x['is_closed'] == 'False', restaurants))\n"
    ]
   },
   {
