--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda x: not x['is_closed'], restaurants))\n"
+    "    return list(filter(lambda x: x['is_closed'] == False, restaurants))\n"
    ]
   },
   {
